# squares-in-disk

./: .gitignore  CMakeLists.txt  LICENSE  README  prover_output_23_11_2020.txt
ivarp/include/ivarp/: CMakeLists.txt  array.hpp  atomic_float.hpp  bool.hpp  bound_dependency_analysis.hpp  bound_direction.hpp  bound_propagation.hpp  compile_time_bounds.hpp  constant_folding.hpp  constraint_reformulation.hpp  constraint_system.hpp  context.hpp  critical_collector.hpp  critical_printer.hpp  critical_reducer.hpp  cuda.hpp  cuda_device_discovery.hpp  cuda_transformer.hpp  default_progress_observer.hpp  index_queue_set.hpp  math.hpp  math_fn.hpp  metaprogramming.hpp  number.hpp  progress_printer.hpp  prover.hpp  prover_input.hpp  refactor_constraint_system.hpp  rounding.hpp  run_prover.hpp  splitter.hpp  symbol_export.hpp  tuple.hpp  variable_description.hpp
ivarp/include/ivarp/bound_dependency_analysis/: cbd_args.hpp  cbd_arithmetic_ops.hpp  cbd_bounded.hpp  cbd_constants.hpp  cbd_meta_eval_tag.hpp  cbd_simple_deps.hpp  compute_bound_dependencies.hpp
ivarp/include/ivarp/bound_propagation/: bound_event.hpp  direct_recursive.hpp  dynamic_bound_application.hpp  iterated_recursive.hpp  propagation_result.hpp
ivarp/include/ivarp/compile_time_bounds/: initial_bounds.hpp
ivarp/include/ivarp/constant_folding/: children.hpp  constant_folding_expr.hpp  constant_folding_expr_eval.hpp  constant_folding_pred.hpp  constant_folding_pred_eval.hpp  fold_constants.hpp
ivarp/include/ivarp/constraint_reformulation/: reformulate_binary_pred.hpp  reformulate_negation.hpp
ivarp/include/ivarp/constraint_system/: extract_bound_constraints.hpp  extract_ct_bounds.hpp
ivarp/include/ivarp/cpu_prover/: cpu_prover_core.hpp
ivarp/include/ivarp/cuda_support/: atomics.hpp  constexpr_fn.hpp  macros.hpp  stdcpp.hpp
ivarp/include/ivarp/math_fn/: args.hpp  binary_ops.hpp  binary_template.hpp  children.hpp  constant.hpp  cuda_constant.hpp  custom_function.hpp  custom_function_template.hpp  depends_on_arg.hpp  eval.hpp  expression.hpp  fixed_pow.hpp  function_printer.hpp  fwd.hpp  has_interval_constants.hpp  interval_acos.hpp  interval_asin.hpp  interval_promotion.hpp  interval_sqrt.hpp  math_meta_eval.hpp  math_meta_fn.hpp  n_ary_ops.hpp  n_ary_template.hpp  numargs.hpp  predicate_eval.hpp  preserves_rationality.hpp  replace_args.hpp  symbolic_call.hpp  tag_of.hpp  tag_traits.hpp  ternary_ops.hpp  ternary_template.hpp  unary_fns.hpp  unary_ops.hpp  unary_template.hpp
ivarp/include/ivarp/math_fn/constant/: as.hpp  (+6 more)
ivarp/include/ivarp/metaprogramming/: allof_oneof.hpp  bare_type.hpp  filter_index_pack.hpp  index_add_offset.hpp  index_at.hpp  index_concat.hpp  index_pack.hpp  index_range.hpp  merge_index_packs.hpp  minof_maxof.hpp  predicate_not.hpp  tuple_index_pack.hpp  type_at.hpp
ivarp/include/ivarp/number/: bounded_rational.hpp  decimal_literal.hpp  device_compat.hpp  exact_less_than.hpp  factorize.hpp  fixed_point_bounds.hpp  fixed_point_bounds_cos.hpp  fixed_point_bounds_impl.hpp  fixed_point_bounds_sin.hpp  fixed_point_bounds_sqrt.hpp  float_interval_addsub.hpp  float_interval_div.hpp  float_interval_mul.hpp  float_interval_ops.hpp  float_interval_print.hpp  fwd.hpp  int_literal.hpp  interval.hpp  interval_comparisons.hpp  interval_div.hpp  literals.hpp  minmax.hpp  mpfr.hpp  rational.hpp  traits.hpp  type_conversions.hpp
ivarp/include/ivarp/prover/: basic_prover_core.hpp  check_predicate_to_constraints.hpp  constraint_propagation.hpp  constraints.hpp  cpu_run_prover.hpp  cuboid_queue.hpp  dynamic_entry.hpp  pd_impl_split_into.hpp  proof_driver.hpp  proof_information.hpp  proof_runner.hpp  proof_runner_impl.hpp  prover.hpp  prover_cpu.hpp  prover_thread.hpp  variable.hpp
ivarp/include/ivarp/prover_input/: make_prover_input_impl.hpp  print_prover_input_impl.hpp  process_var_splitting.hpp
ivarp/src/: CMakeLists.txt  convert_number.cpp  factorize.cpp  fp_print.cpp  init_rounding.cpp  interval_acos.cpp  interval_asin.cpp  interval_cos.cpp  interval_sin.cpp  irational_div.cpp  irational_mul.cpp  irational_sqrt.cpp  irr_constants.cpp  irr_constants.hpp  mpfr_helpers.hpp  msvc_sqrt_workaround.asm  powint.cpp  progress_printer.cpp  rational_invert.cpp  rational_modf.cpp  sincos_period_info.hpp
ivarp/test/: CMakeLists.txt  bound_and_simplify.cpp  bound_dependency_analysis.cpp  compile_time_bounds.cpp  constant_folding_custom_function.cpp  constraint_propagation.cpp  constraint_system.cpp  custom_function.cpp  exact_less_than.cpp  expected_criticals.cpp  expected_criticals2.cpp  factorize.cpp  fixed_point_bounds.cpp  fn_eval.cpp  function_printer.cpp  if_then_else.cpp  initial_compile_time_bounds.cpp  interval.cpp  interval_addsub.cpp  interval_div.cpp  interval_mul.cpp  interval_sincos.cpp  interval_sqrt.cpp  literals.cpp  math.cpp  math_pred.cpp  metaprogramming.cpp  numargs_test.cpp  positive_and_negative_proof1.cpp  positive_and_negative_proof2.cpp  powint.cpp  prover_input.cpp  rewrite_to_bounds.cpp  rng.cpp  run_prover.cpp  simple_positive_proof.cpp  splitter.cpp  symbolic_call.cpp  tag_of.cpp  test_convert_number.cpp  (+3 more)
ivarp/test/cuda/: critical_reducer.cu  cuda_test_fn.cuh  cuda_test_util.cuh  device_tuple.cu  exact_less_than.cu  expected_criticals.cu  expected_criticals2.cu  fn_eval.cu  grid_dimensions.cu  intervals.cu  math.cu  positive_and_negative_proof1.cu  positive_and_negative_proof2.cu
ivarp/test/issues/: issue10.cpp  issue10.cu  issue10_src.cpp  issue8.cpp  issue9.cu
src/: B1.hpp  B2.hpp  B3.hpp  B4.hpp  B5.hpp  B6.hpp  CMakeLists.txt  XY.hpp  auxiliary_functions.hpp  five_subcontainer.cpp  five_subcontainer.cu  fn_aux.hpp  four_subcontainer.cpp  four_subcontainer.cu  lemma30.cpp  lemma30.cu  lemma30.hpp  lemma31.cpp  lemma31.cu  lemma31_proof1.hpp  lemma31_proof2.hpp  lemma31_proof3.hpp  lemma31_proof4.hpp  lemma31_proof5.hpp  lemma32.cpp  lemma32.cu  lemma32_proof1.hpp  lemma32_proof2.hpp  lemma33.cpp  lemma33.cu  lemma33_proof1.hpp  lemma33_proof2.hpp  lemma34.cpp  lemma34.cu  lemma34_proof1.hpp  lemma34_proof2.hpp  lemma34_proof3.hpp  lemma35.cpp  lemma35.cu  lemma35_proof.hpp  (+17 more)
(+73 files in other folders)
